--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@fullcalendar/core": "^6.0.0-beta.1",
+    "@fullcalendar/daygrid": "^6.0.0-beta.1",
+    "@fullcalendar/web-component": "^6.0.0-beta.1",
     "primeflex": "^3.2.1",
     "primeicons": "^6.0.1",
     "primeng": "^14.1.2",
