--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@angular/router": "^14.2.0",
     "@fullcalendar/core": "^6.0.0-beta.1",
     "@fullcalendar/daygrid": "^6.0.0-beta.1",
-    "@fullcalendar/timegrid": "^5.11.3",
+    "@fullcalendar/timegrid": "^6.0.0-beta.1",
     "@fullcalendar/web-component": "^6.0.0-beta.1",
     "primeflex": "^3.2.1",
     "primeicons": "^6.0.1",
