--- a/angular.json
+++ b/angular.json
@@ -32,6 +32,10 @@
               "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
               "node_modules/primeng/resources/primeng.min.css",
               "node_modules/primeflex/primeflex.css",
+              "node_modules/@fullcalendar/daygrid/main.css",
+              "node_modules/@fullcalendar/common/main.css",
+              "node_modules/@fullcalendar/timegrid/main.css",
+              
               "src/styles.scss"
             ],
             "scripts": []
@@ -104,6 +108,9 @@
               "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
               "node_modules/primeng/resources/primeng.min.css",
               "node_modules/primeflex/primeflex.css",
+              "node_modules/@fullcalendar/common/main.css",
+              "node_modules/@fullcalendar/daygrid/main.css",
+              "node_modules/@fullcalendar/timegrid/main.css",
               "src/styles.scss"
             ],
             "scripts": []
