--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
-    "@fullcalendar/core": "^6.0.0-beta.1",
-    "@fullcalendar/daygrid": "^6.0.0-beta.1",
-    "@fullcalendar/interaction": "^6.0.0-beta.1",
-    "@fullcalendar/timegrid": "^6.0.0-beta.1",
-    "@fullcalendar/web-component": "^6.0.0-beta.1",
+    "@fullcalendar/angular": "^5.11.3",
+    "@fullcalendar/common": "^5.11.3",
+    "@fullcalendar/core": "^5.11.3",
+    "@fullcalendar/daygrid": "^5.11.3",
+    "@fullcalendar/interaction": "^5.11.3",
+    "@fullcalendar/timegrid": "^5.11.3",
     "primeflex": "^3.2.1",
     "primeicons": "^6.0.1",
     "primeng": "^14.1.2",
