--- a/angular.json
+++ b/angular.json
@@ -38,7 +38,7 @@
               
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": ["../node_modules/chart.js/dist/chart.js"]
           },
           "configurations": {
             "production": {
@@ -113,7 +113,7 @@
               "node_modules/@fullcalendar/timegrid/main.css",
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": ["../node_modules/chart.js/dist/chart.js"]
           }
         }
       }
