--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@fullcalendar/daygrid": "^5.11.3",
     "@fullcalendar/interaction": "^5.11.3",
     "@fullcalendar/timegrid": "^5.11.3",
+    "chart.js": "^4.0.1",
     "primeflex": "^3.2.1",
     "primeicons": "^6.0.1",
     "primeng": "^14.1.2",
